# Universal-converter

./: .gitignore  CMakeLists.txt  README.md
source/: App.cpp  App.h  BigFraction.cpp  BigFraction.h  BigNumber.cpp  BigNumber.h  Bigint.cpp  Bigint.h  main.cpp
source/tests/: sum_tests.py
